--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
     <h1>Test Video Hosting/Streaming Embeds</h1>
     <a href="https://github.com/KuleGuy27/testfreevideohostings/"><button>Back to Github repo</button></a>
     <button onclick="toggleDarkMode()">Toggle Dark Mode</button>
+    <a href="testvideo-forfreevideohosting_engsub.srt" download>First video subtitle file</a>
     <table>
         <thead>
             <tr style="font-size: larger;">
