--- a/index.html
+++ b/index.html
@@ -119,9 +119,14 @@
 </head>
 <body>
     <h1>Test Video Hosting/Streaming Embeds</h1>
-    <a href="https://github.com/KuleGuy27/testfreevideohostings/"><button>Back to Github repo</button></a>
-    <button onclick="toggleDarkMode()">Toggle Dark Mode</button>
-    <a href="testvideo-forfreevideohosting_engsub.srt" download>First video subtitle file</a>
+    <a href="../index.html"><button>Back to home</button></a>
+    <button onclick="toggleDarkMode()">Toggle Dark Mode</button><br>
+    <div id="subtitles">
+    <a href="testvideo-forfreevideohosting_engsub.srt" download>First video subtitle file</a> /
+    <a href="preview-srt.html">(Preview)</a> /
+    <a href="https://www.mediafire.com/file/whrgk24qxqkud3j/testvideo-forfreevideohosting_engsub.srt/file" target="_blank">(Mirror)</a>
+    </div>
+    
     <table>
         <thead>
             <tr style="font-size: larger;">
