--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
     
     h1 {margin-bottom: 15px;}
     img {width: 200px;}
+
+    #subtitles {
+        background-color: #00fb82;
+        width: fit-content;
+        color: black;
+    }
     
     button {
         margin: 5px;
