--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 </head>
 <body>
     <h1>Test Video Hosting/Streaming Embeds</h1>
-    <a href="../index.html"><button>Back to home</button></a>
+    <a href="https://github.com/KuleGuy27/testfreevideohostings/"><button>Back to Github repo</button></a>
     <button onclick="toggleDarkMode()">Toggle Dark Mode</button><br>
     <div id="subtitles">
     <a href="testvideo-forfreevideohosting_engsub.srt" download>First video subtitle file</a> /
